# bilstm-ppo-trader

./: .env.example  .gitignore  README.md  package-lock.json  package.json  render.yaml  tsconfig.json
.claude/: settings.local.json
ai-spot-trading-backend/: AiSpotTrading.Backend.csproj  AiSpotTrading.Backend.http  Dockerfile  Program.cs  appsettings.json
ai-spot-trading-backend/Controllers/: AuthController.cs  ExchangeAccountsController.cs  MarketController.cs  PortfolioController.cs  (+1 more)
ai-spot-trading-frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
ai-spot-trading-trader/: Dockerfile  ca.pem  config.py  data_processor.py  database.py  main.py  model_loader.py  pyproject.toml  requirements.txt  trade_executor.py
ai-spot-trading-trader/models/: policy.keras  value.keras
ai-spot-trading-trader/models/forecaster/: fingerprint.pb  saved_model.pb
ai-spot-trading-trader/models/forecaster/variables/: variables.data-00000-of-00001  variables.index
ai-spot-trading-trader/models/policy/: fingerprint.pb  saved_model.pb
ai-spot-trading-trader/models/policy/variables/: variables.data-00000-of-00001  variables.index
ai-spot-trading-trader/models/value/: fingerprint.pb  saved_model.pb
ai-spot-trading-trader/models/value/variables/: variables.data-00000-of-00001  variables.index
notebooks/: README.md  ai-spot-trading - Colab.ipynb  ai-spot-trading - Dataset.ipynb  ai-spot-trading - Kaggle.ipynb  bilstm-ppo-self-attention-ai-spot-trading.ipynb
scripts/: run-with-cuda118.ps1  setup-cuda.ps1
src/: main.ts
(+112 files in other folders)
