[project]
name = "ai-spot-trading-trader"
version = "0.1.0"
description = ""
authors = [
    {name = "AcauRangel",email = "acauarangel17@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "ccxt (>=4.5.55,<5.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "tensorflow (>=2.21.0,<3.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "pywavelets (>=1.9.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
